[package]
name = "mergediff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.5.0"
fastcmp = "1.0.1"
memmap = "0.7.0"

[profile.release]
# strip = true  # Automatically strip symbols from the binary.
lto = true
